--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <title>Practicing with GIMP</title>
         <style>
             #pictureframe {position: relative;}
-            #trophy {position: absolute; left: 350px; top: 200px;}
+            #trophy {position: absolute; left: 700px; top: 270px;}
         </style>
     </head>
     <body>
         <h1>Cat with Trophy, 2018</h1>
         <div id="pictureframe">
-            <img src="cat.jpg" width="600">
-            <img id="trophy" src="trophy.jpg" width="150">
+            <img src="cat_smaller.jpg" width="600">
+            <img id="trophy" src="trophy_transparent.png" width="150">
         </div>
 
         <h2>Instructions</h2>
